--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -2,7 +2,7 @@
 
 <header>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       
       <a class="navbar-brand" href="">
@@ -48,6 +48,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary border-bottom"></nav>
 </header>
+<br><br><br>
 
 <div class="container mt-4">
   <div class="card shadow-lg p-4 text-center welcome-card">
