--- a/src/app/pages/login/login.html
+++ b/src/app/pages/login/login.html
@@ -2,7 +2,7 @@
 
     <header>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
           
           <a class="navbar-brand" href="">
@@ -44,6 +44,7 @@
       </nav>
     
     </header>
+    <br><br><br>
 
     <div class="container mt-5" style="max-width: 400px">
       <h2 class="text-center mb-4">Entrar</h2>
