--- a/src/app/pages/novos/novos.html
+++ b/src/app/pages/novos/novos.html
@@ -2,7 +2,7 @@
 
     <header>
     
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container-fluid">
 
           <a class="navbar-brand" href="">
@@ -50,6 +50,7 @@
       </nav>
     
     </header>
+    <br><br><br>
     
     <body class="bg-light page-anim">
     
