--- a/src/app/pages/pedidos/pedidos.html
+++ b/src/app/pages/pedidos/pedidos.html
@@ -2,7 +2,7 @@
 
 <header>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
       
       <a class="navbar-brand" href="">
@@ -45,6 +45,8 @@
       </div>
     </div>
   </nav>
+</header>
+<br><br><br><br><br><br>
 
    <h1 class="text-center mb-4">Seus Pedidos</h1>
 
