--- a/src/app/pages/usados/usados.html
+++ b/src/app/pages/usados/usados.html
@@ -2,7 +2,7 @@
 
 <header>
 
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
     <div class="container-fluid">
 
       <a class="navbar-brand" href="">
@@ -46,6 +46,7 @@
   </nav>
 
 </header>
+<br><br><br>
 
 
 
